[package]
name = "tcurse"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/wbew/tcurse"
homepage = "https://github.com/wbew/tcurse"
description = "CLI tool for interacting with the Recurse Center API"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
